# storm-engine

./: CMakeLists.txt  conanfile.py
cmake/: FindALUT.cmake  FindOGGVORBIS.cmake  FindSDL.cmake  FindSpdlog.cmake  FindSteamSdk.cmake
src/: CMakeLists.txt
src/apps/ENGINE/: compiler.cpp
src/apps/engine/: CMakeLists.txt
src/apps/engine/src/: main.cpp
src/libs/battle_interface/include/: bi_utils.h
src/libs/battle_interface/src/: battle_command.cpp  battle_command.h  bi_utils.cpp  log_and_action.cpp  log_and_action.h
src/libs/battle_interface/src/sea/: battle_navigator.cpp  battle_navigator.h  battle_ship_sign.cpp  battle_ship_sign.h
src/libs/common/: CMakeLists.txt
src/libs/common/include/: attributes.h  message.h  storm_platform.h
src/libs/core/: CMakeLists.txt
src/libs/core/src/: compiler.cpp  compiler.h  core_impl.cpp  entity_container_cache.cpp  entity_manager.cpp  script_cache.h
src/libs/diagnostics/: CMakeLists.txt
src/libs/diagnostics/include/: lifecycle_diagnostics_service.hpp
src/libs/diagnostics/src/: lifecycle_diagnostics_service.cpp
src/libs/diagnostics/src/spdlog_sinks/: file_helper.cpp
src/libs/geometry/src/: geometry.cpp
src/libs/input/: CMakeLists.txt
src/libs/input/src/: sdl_input.cpp
src/libs/island/src/: island.cpp
src/libs/location/src/: fader.cpp  fader.h  model_array.cpp  supervisor.cpp  supervisor.h
src/libs/renderer/src/: s_device.cpp  s_device.h  storm_d3dx9.cpp
src/libs/rigging/src/: flag.cpp
src/libs/sailors/src/: sailors.cpp
src/libs/sea_ai/src/: ai_group.cpp  ai_ship_cannon_controller.cpp  ai_ship_cannon_controller.h  sea_ai.cpp
src/libs/shared_headers/include/shared/: messages.h
src/libs/shared_headers/include/shared/battle_interface/: log_msg.h
src/libs/shared_headers/include/shared/sea_ai/: script_defines.h
src/libs/ship/src/: ship.cpp
src/libs/sound_service/: CMakeLists.txt
src/libs/sound_service/include/: sound_defines.h
src/libs/sound_service/src/: sound_service.cpp  sound_service.h
src/libs/steam_api/: CMakeLists.txt
src/libs/util/include/: fs.h
src/libs/util/include/storm/: ringbuffer_stack.hpp  string_compare.hpp
src/libs/weather/src/: lightning.cpp  lightning.h  stars.cpp  sun_glow.cpp
src/libs/window/: CMakeLists.txt
src/libs/window/src/: sdl_window.cpp
src/libs/worldmap/src/: world_map.cpp
src/libs/xinterface/src/: info_handler.cpp  info_handler.h  xinterface.cpp
src/libs/xinterface/src/editor/: editor_defines.cpp
src/libs/xinterface/src/nodes/: xi_quest_texts.cpp  xi_quest_titles.cpp  xi_quest_titles.h  xi_table.cpp  xi_text_button.cpp  xi_v_img_scroll.cpp  xi_v_img_scroll.h
src/libs/xinterface/src/quest_file_reader/: quest_file_reader.cpp
src/libs/xinterface/src/scr_shoter/: scr_shoter.cpp
src/techniques/effects/: maineffects.fx
src/techniques/interfaces/: game_interface.fx
src/techniques/location/: maineffects.fx
